...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.EnterFriendActivity">

    <EditText
        android:id="@+id/enterUIDEditText"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:ems="9"
        android:hint="Enter UIDs here"
...
<!--        android:onClick="onBackPressed"-->
<!--        android:text="Back"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintStart_toEndOf="@+id/enterUIDEditText" />-->

    <Button
        android:id="@+id/nextBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:onClick="onNextPressed"
        android:text="Next"
...
